# toki-pona-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  architecture-mvp.md  compose.dev.yaml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  fly.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  dependabot-uv-lock.yml  pytest.yml  test.yml
apps/accounts/: adapters.py  context_processors.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/core/migrations/: 0001_pgvector.py
apps/dashboard/: models.py  urls.py  views.py
apps/dashboard/migrations/: 0001_initial.py
apps/dashboard/templates/dashboard/: home.html
apps/listening/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/listening/management/commands/: load_sample_phrases.py
apps/listening/migrations/: 0001_initial.py  0002_listeningexerciseprogress.py  0003_delete_listeningexerciseprogress_and_more.py
apps/listening/templates/listening/: exercise.html  index.html  practice.html
apps/listening/templates/listening/partials/: feedback.html
apps/listening/tests/: test_commands.py  test_models.py  test_services.py  test_views.py
apps/signing/: README.md  admin.py  apps.py  models.py  urls.py  views.py
apps/signing/management/commands/: download_sign_videos.py  load_sample_signs.py  process_sign_videos.py
apps/signing/migrations/: 0001_initial.py  0002_signingprogress.py
apps/signing/services/: __init__.py  sign_comparer.py  sign_visualizer.py  utils.py  video_manager.py
apps/signing/templates/signing/: index.html  practice.html
apps/signing/templatetags/: signing_tags.py
apps/signing/tests/: test_commands.py  test_models.py  test_views.py
apps/tutor/: admin.py  apps.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
apps/tutor/management/commands/: load_sample_phrases.py
apps/tutor/migrations/: 0001_initial.py  0002_message.py  0003_videoresource.py  0004_transcript.py  0005_learningprogress.py  0006_tokiponaphrase_quizattempt_listeningexerciseprogress_and_more.py  0007_alter_conversation_options_alter_message_options.py  0008_alter_message_role.py  0009_remove_transcript_embeddings.py
apps/tutor/services/: __init__.py  claude_service.py  quiz_service.py  transcript_service.py  translation_service.py  youtube_service.py
apps/tutor/templates/tutor/: base_chat.html  conversation.html  conversation_list.html  create_conversation.html  delete_conversation.html  index.html
apps/tutor/templates/tutor/partials/: feedback.html  message.html  messages.html  quiz.html  quiz_loading.html  video_panel.html
apps/tutor/templatetags/: tutor_extras.py
apps/tutor/tests/: test_commands.py  test_models.py  test_services.py
apps/writing/: admin.py  apps.py  models.py  urls.py  views.py
apps/writing/management/commands/: load_glyphs.py  load_sample_glyphs.py
apps/writing/migrations/: 0001_initial.py  0002_glyphpracticeprogress.py  0003_alter_glyph_options.py
apps/writing/services/: __init__.py  ml_storage.py  recognition.py  svg.py  templates.py
apps/writing/templates/writing/: index.html  practice.html
apps/writing/templatetags/: writing_tags.py
apps/writing/tests/: conftest.py  mocks.py  test_commands.py  test_models.py  test_services.py  test_views.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  celery.py  development.py  production.py  test.py
docs/: ai-tutor-plan.md  architecture-mvp.md  architecture.md  chatbot-plan.md  tokichat-plan.md
static/css/: style.css
static/js/: hand_tracking.js  main.js
templates/: base.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_reset.html  signup.html  signup_closed.html
templates/base/: navbar.html
