[project]
name = "toki-pona-ai"
version = "0.1.0"
description = "AI-Powered Toki Pona Learning App"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Felipe Villegas", email = "felavid@gmail.com"}
]
license = "MIT"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django>=4.2.20",
    "django-allauth>=65.5.0",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-storages[s3]>=1.14.5",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg>=3.2.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "factory-boy>=3.3.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "ruff>=0.11.0",
]
