[project]
name = "toki-pona-ai"
version = "0.1.0"
description = "AI-Powered Toki Pona Learning App"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Felipe Villegas", email = "felavid@gmail.com"}
]
license = "MIT"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.37.22",
    "cairosvg>=2.7.1",
    "celery>=5.4.0",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "crispy-bootstrap5>=2024.10",
    "django>=4.2.20",
    "django-allauth>=65.5.0",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-storages[s3]>=1.14.5",
    "django-widget-tweaks>=1.5.0",
    "fastdtw>=0.3.4",
    "google-api-python-client>=2.166.0",
    "gunicorn>=23.0.0",
    "imageio>=2.37.0",
    "mediapipe==0.10.18",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "psycopg>=3.2.6",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "redis[hiredis]>=5.2.1",
    "requests>=2.32.3",
    "sentry-sdk[django]>=2.24.1",
    "speechrecognition>=3.14.2",
    "whitenoise>=6.9.0",
    "youtube-transcript-api>=1.0.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1",
    "django-extensions>=3.2.3",
    "factory-boy>=3.3.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov=. --cov-report=term --ds=config.settings.test --reuse-db --import-mode=importlib"
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_classes = "Test* *Tests"
python_functions = "test_*"
testpaths = ["apps"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.lint.per-file-ignores]
# Ignore isort rule (I) for the test settings file to preserve import order
"config/settings/test.py" = ["I"]
